# CartesianMotionsForManipulator

./: .gitignore  .gitmodules  README.md
cartesian_motion_control/: CMakeLists.txt  package.xml
cartesian_motion_control/config/: params.yaml  sample_path_points.yaml  ur_controllers.yaml
cartesian_motion_control/include/cartesian_motion_control/: cartesian_motion_server.hpp  ik_solver_handlers.hpp  trajectory_converter.hpp  trajectory_generator.hpp
cartesian_motion_control/src/: cartesian_motion_server.cpp  ik_orocos.cpp  main.cpp  trajectory_generator.cpp
cartesian_motion_control/urdf/: ur10.urdf
cartesian_motion_interfaces/: CMakeLists.txt  package.xml
cartesian_motion_interfaces/action/: CartesianTrajectory.action
cartesian_motion_tests/: package.xml  setup.cfg  setup.py
cartesian_motion_tests/cartesian_motion_tests/: controller_tune.py  motion_plotter.py  send_cartesian_goal.py
