cmake_minimum_required(VERSION 3.8)
project(cartesian_motion_control)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)
find_package(rclcpp REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(kdl_parser REQUIRED)
find_package(urdf REQUIRED)

find_package(Eigen3 REQUIRED)
find_package(orocos_kdl REQUIRED)

add_library(cartesian_trajectory_generator src/trajectory_generator.cpp)
ament_target_dependencies(cartesian_trajectory_generator geometry_msgs rclcpp Eigen3)
target_include_directories(cartesian_trajectory_generator PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)

add_executable(traj_gen_orocos src/traj_gen_orocos.cpp)
ament_target_dependencies(traj_gen_orocos orocos_kdl Eigen3)
target_include_directories(traj_gen_orocos PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)

add_executable(ik_orocos src/ik_orocos.cpp)
ament_target_dependencies(ik_orocos urdf kdl_parser orocos_kdl Eigen3)
target_include_directories(ik_orocos PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)

install(TARGETS
  cartesian_trajectory_generator
  traj_gen_orocos
  ik_orocos
  DESTINATION lib/${PROJECT_NAME})


if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
